# easystats-airflow

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
dags/: clickhouse-hook.py  clickhouse-operator.py  clickhouse-sensor.py  clickhouse.py
