[tool.poetry]
name = "easystats-airflow"
version = "0.1.0"
description = ""
authors = ["Илья Снимщиков <igsnimschikov@edu.hse.ru>"]
readme = "README.md"
packages = [{include = "easystats_airflow"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
